fix card open full screen on mobile

--- a/src/App.css
+++ b/src/App.css
@@ -389,7 +389,9 @@ footer{
 }
 .img--blur{
     display: none;
-    height: 300px;
+    max-width: 80vw;
+    min-height: 300px;
+    max-height: 80vh;
     border-top-left-radius: 10px;
     border-top-right-radius: 10px;
 }
@@ -397,7 +399,7 @@ footer{
     position: fixed;
     top: 50%;
     left: 50%;
-    transform: translate(-50%,-50%) scale(2);
+    transform: translate(-50%,-50%);
     border-radius: 10px;
     z-index: 12;
     display: block;
@@ -409,7 +411,7 @@ footer{
     left: 0;
     width: 100vw;
     height: 100vh;
-    backdrop-filter: blur(5px);
+    backdrop-filter: blur(15px);
     z-index: 11;
 }
 .img-bg--blur.active{
